k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zmartr-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zmartr-api
  template:
    metadata:
      labels:
        app: zmartr-api
    spec:
      containers:
      - name: zmartr-api
        image: registry.digitalocean.com/oscarleo/zmartr-api
        resources:
          requests:
            memory: "256Mi"
            cpu: "150m"
          limits:
            memory: "256Mi"
            cpu: "150m"
        ports:
        - containerPort: 5000
