k8s/api/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: zmartr-api-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: zmartr-api
  ports:
  - port: 80
    targetPort: 5000
